# mini-os

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: fs.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  vga.rs
