[package]
name = "mini-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.3"
spin = "0.9.8"
x86_64 = "0.14.10"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pic8259 = { version = "0.10.2", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
